test/variables/diten/loopIndexConst.good
loopIndexConst.chpl:6: error: illegal lvalue in assignment
